# RedTeam

./: .gitignore  .gitmodules  404.html  CNAME  LICENSE.txt  MANIFEST.in  Makefile  README.md  VERSION.txt  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  sitemap.xml
.github/workflows/: 1.bump-version.yml  2.create-release.yml  3.update-changelog.yml  publish-docs.yml.bak
1.validator/: index.html
2.miner/: index.html
3.submission_guide/: index.html
4.validator_custom/: index.html
5.docker/: index.html
assets/: overview.drawio
assets/css/: extra.css
challenge_submission_guide/: index.html
challenge_templates/deprecated/humanize_behaviour_v1/: index.html
challenge_templates/humanize_behaviour_v2/: index.html
diagrams/humanize_behaviour/flow.general/: index.html
docker/: index.html
docs/: 1.validator.md  2.miner.md  3.submission_guide.md  4.validator_custom.md  5.docker.md  CNAME  challenge_submission_guide.md  index.md  miner.md  validator.md  validator_custom.md
docs/challenge_templates/: humanize_behaviour_v2.md
docs/template/: humanize_behaviour_v1.md  humanize_behaviour_v2.md  response_quality_adversarial_v2.md  response_quality_ranker_v2.md  text_detection.md  webui_auto.md
miner/: index.html
neurons/miner/: active_commit.yaml  miner.py
neurons/validator/: validator.py
redteam_core/: __init__.py  constants.py
redteam_core/challenge_pool/: __init__.py  active_challenges.yaml  base.py  comparer.py  controller.py  docker_utils.py
redteam_core/miner/: base_miner.py
redteam_core/validator/: __init__.py  challenge_manager.py  log_handler.py  miner_manager.py  models.py  storage_manager.py  utils.py  validator.py
requirements/: cfg_analyser_binary-1.2.0-py3-none-any.whl  requirements.build.txt  requirements.dev.txt  requirements.docs.txt
scripts/: bump-version.sh  clean.sh  get-version.sh  validator_auto_update.py
search/: search_index.json
services/rewarding/: README.md  app.py  new_app.py
template/humanize_behaviour_v1/: index.html
template/humanize_behaviour_v2/: index.html
template/response_quality_adversarial_v2/: index.html
template/response_quality_ranker_v2/: index.html
template/text_detection/: index.html
validator/: index.html
validator_custom/: index.html
(+142 files in other folders)
